0032463: Visualization - implement Image_AlienPixMap::Load() via emscripten_get_preloaded_image_data()